minecraft/attachpv.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: attachpv
  name: attachpv
spec:
  volumes:
  - name: mctest-volume
    persistentVolumeClaim:
      claimName: pvc-mctest
  containers:
  - image: openjdk:8u212-jre-alpine
    args:
      - sleep
      - "50000"
    name: attachpv
    resources: {}
    volumeMounts:
      - mountPath: "/data"
        name: mctest-volume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
