minecraft/mc-build-pv.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: build
  name: build
spec:
  replicas: 1
  selector:
    matchLabels:
      run: build
  strategy: {}
  template:
    metadata:
      labels:
        run: build
    spec:
      volumes:
      - name: vol-nfs-build
        persistentVolumeClaim:
          claimName: vol-nfs-build-claim
      containers:
      - image: itzg/minecraft-server
        name: build
        resources:
          requests:
            memory: "2Gi"
        ports:
        - containerPort: 25565
          name: main
        volumeMounts:
          - mountPath: "/data"
            name: vol-nfs-build
