minecraft/mctest-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mctest
  name: mctest
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mctest
  strategy: {}
  template:
    metadata:
      labels:
        run: mctest
    spec:
      volumes:
      - name: mctest-volume
        persistentVolumeClaim:
          claimName: pvc-mctest
      containers:
      - image: itzg/minecraft-server
        name: mctest
        resources:
          requests:
            memory: "1Gi"
            cpu: "1" # "500m"
        ports:
        - containerPort: 25565
          name: main
        readinessProbe:
          exec:
            command:
            - mcstatus
            - localhost
            - ping
          initialDelaySeconds: 90
          periodSeconds: 5
        livenessProbe:
          exec:
            command:
            - mcstatus
            - localhost
            - ping
          initialDelaySeconds: 90
          periodSeconds: 5
        volumeMounts:
          - mountPath: "/data"
            name: mctest-volume
