minecraft/mctest-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mctest
  name: mctest
spec:
  volumes:
  - name: mctest-volume
    persistentVolumeClaim:
      claimName: pvc-mctest
  containers:
  - image: itzg/minecraft-server
    name: mctest
    resources: {}
    ports:
    - containerPort: 25565
      name: main
    readinessProbe:
      exec:
        command:
        - mcstatus
        - localhost
        - ping
      initialDelaySeconds: 5
      periodSeconds: 5
    livenessProbe:
      exec:
        command:
        - mcstatus
        - localhost
        - ping
      initialDelaySeconds: 5
      periodSeconds: 5
    volumeMounts:
      - mountPath: "/data"
        name: mctest-volume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
