minecraft/mc-survive2-only-pv.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: survive2
  name: survive2
spec:
  replicas: 1
  selector:
    matchLabels:
      run: survive2
  strategy: {}
  template:
    metadata:
      labels:
        run: survive2
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000     
      volumes:
      - name: vol-nfs-survive2
        persistentVolumeClaim:
          claimName: vol-nfs-survive2-claim
      containers:
      - image: itzg/minecraft-server
        name: survive2
        resources:
          requests:
            memory: "2Gi"
        ports:
        - containerPort: 25565
          name: main
        readinessProbe:
          exec:
            command:
            - mcstatus
            - localhost
            - ping
          initialDelaySeconds: 240
          periodSeconds: 5
        livenessProbe:
          exec:
            command:
            - mcstatus
            - localhost
            - ping
          initialDelaySeconds: 240
          periodSeconds: 5
        volumeMounts:
          - mountPath: "/data"
            name: vol-nfs-survive2
---
apiVersion: v1
kind: Service
metadata:
  name: survive2-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: dynmap
    protocol: TCP
    targetPort: 8123
  - port: 25565
    name: minecraft
    protocol: TCP
    targetPort: 25565
  selector:
    run: survive2
