minecraft/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mc-ingress
  annotations:
    kubernetes.io/ingress.class: "nsx"
    ncp/use-regex: "True"
spec:
  rules:
  - http:
      paths:
      - path: /surv5/(.*)
        backend:
          serviceName: survive5-svc
          servicePort: 8123
      # - path: /surv5/cmd
      #   backend:
      #     serviceName: survive5-svc
      #     servicePort: 8000
      - path: /surv4/(.*)
        backend:
          serviceName: survive4-svc
          servicePort: 80
      # - path: /surv4/cmd
      #   backend:
      #     serviceName: survive4-svc
      #     servicePort: 8000
